--- a/lib/Charu/template/day_body.erb
+++ b/lib/Charu/template/day_body.erb
@@ -1,24 +1,6 @@
-<a href="./index.html"><h1>ニャンモナイトとその日暮らし</h1></a>
+<a href="./index.html"><h1><%= @title %></h1></a>
 <br>
 <body>
-
-<table style="text-align: left; width: 100%;" border="1" cellpadding="2"
-cellspacing="2">
-<tbody>
-<tr>
-<td style="vertical-align: top;"><a href="./suimin/index.html"><h2>睡眠障害で苦しんでいる人</h2></a><br />
-</td>
-<td style="vertical-align: top;"><a href="./utu/index.html"><h2>鬱で苦しんでいる人</h2></a><br />
-</td>
-<td style="vertical-align: top;"><a href="./book/index.html"><h2>読書</h2></a><br />
-</td>
-<td style="vertical-align: top;"><a href="./FreeSoft/index.html"><h2>フリーソフト</h2><br />
-</td>
-<td style="vertical-align: top;"><a href="./Software/index.html"><h2>Software</h2><br />
-</td>
-</tr>
-</tbody>
-</table>
 
 <% @days.each{|day| %>
 <h2><span class="title">
